<resources>
    <string name="app_name">Luma</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="rateRequirement">Please rate at least 0.5 star</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="appointment">Appointment</string>
    <string name="patient_name">Patient Name</string>
    <string name="rating_Description">How satisfied are you with our service?</string>
    <string name="error_msgQ2">Please select an option</string>
    <string name="error_msgQ1">Please select an option</string>
    <string name="error_msgRating">Please select a rating</string>
    <string name="comment_here">Comment here.</string>
    <string name="feedback_Q3">3. Would you provide other comments about the doctor? (optional)</string>
    <string name="feedback_Q1">1. Friendliness and professionalism of the staff</string>
    <string name="feedback_Q2">2. Clarity of communication from the doctor</string>
    <string name="feedback_rating">Rate this feedback</string>
    <string name="doctor_image">Doctor Image</string>
    <string name="select_image">Select Image</string>
    <string name="upload_image">Upload Doctor Image</string>
    <string name="radioQuesOneOptionOne">Excellent</string>
    <string name="radioQuesOneOptionTwo">Good</string>
    <string name="radioQuesOneOptionThree">Fair</string>
    <string name="radioQuesOneOptionFour">Poor</string>
    <string name="radioQuesTwoOptionOne">The doctor communicated clearly and effectively</string>
    <string name="radioQuesTwoOptionTwo">The doctor was mostly clear in their communication</string>
    <string name="radioQuesTwoOptionThree">The doctor\'s communication was somewhat unclear</string>
    <string name="radioQuesTwoOptionFour">The doctor\'s communication was difficult to understand</string>
    <string name="submit_comment">Submit</string>
    <string name="appointment_detail">Appointment Detail</string>
    <string name="appointment_rating">Appointment Rating</string>
    <string name="appointment_feedback">Appointment Feedback</string>
    <string name="doctor_profession">Doctor Profession</string>
    <string name="working_location">Working Location</string>
    <string name="edit">Edit</string>
    <string name="profile_update">Update</string>
    <string name="hospital_suggestion">Suggestion location for hospital</string>
    <string name="cancel_update">Cancel</string>
    <string name="name">Name: </string>
    <string name="profession">Profession: </string>
    <string name="rating">Rate: </string>
    <string name="comment">Feedback Comment</string>
    <string name="review">Feedback Review</string>
    <string name="feedback_Q3_summarize">3. Comments about the doctor</string>
    <string name="numberReview">( 0 )</string>
    <string name="job_location">Working Location:</string>
    <string name="quesOneOptionOne">( 0 )</string>
    <string name="option_start_value">0</string>
    <string name="quesOneOptionTwo">( 0 )</string>
    <string name="quesOptionValue">( 0 )</string>
    <string name="allComment">No comment</string>
    <string name="button_setTime">SET DATETIME</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="current_appointment">Current Appointment</string>
    <string name="past_appointment">Past Appointment</string>
    <string name="create_profile">Create Profile</string>
    <string name="menu_itemName">Menu Name</string>
    <string name="image">image</string>
    <string name="user_name">User Name</string>
    <string name="appointment_status">Appointment Status</string>
    <string name="hospital_image">Hospital Image\n</string>
    <string name="sort_by_name">Sort by Name</string>
    <string name="sort_by_specialist">Sort by Specialist</string>
    <string name="log_out">LOGOUT</string>
    <string name="email">Email</string>
    <string name="welcome">Welcome to Luma Hospital Booking Appointment System</string>
    <string name="description_login">Press Sign In to login your account</string>
    <string name="retrieve_patient_medicine">Retrieve Patient Medicine</string>
    <string name="retrieve">Retrieve</string>
    <string name="medicine">Medicine</string>
    <string name="test">Test</string>
    <string name="radiobutton">RadioButton</string>
    <string name="ok">OK</string>
    <string name="userid">UserId</string>
    <string name="password">password</string>
    <string name="age">Age</string>
    <string name="register">Register</string>
    <string name="total_price">Total Price</string>
    <string name="price_medicine_2">Price Medicine 2</string>
    <string name="price_per_dosage_2">Price per Dosage 2</string>
    <string name="dosage_2">Dosage 2</string>
    <string name="medicine_2">Medicine 2</string>
    <string name="price_medicine_1">Price Medicine 1</string>
    <string name="price_per_dosage_1">Price per Dosage 1</string>
    <string name="dosage_1">Dosage 1</string>
    <string name="medicine_1">Medicine 1</string>
    <string name="delete_appointment">Delete Appointment</string>
    <string name="num">Num</string>
    <string name="feedback_status">Feedback Status</string>
    <string name="commentBtn">Comment</string>
    <string name="upload_medicine_image">Upload Medicine Image</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="recognise_medicine">Recognise Medicine</string>
    <string name="select_medicine_image">Select Medicine Image</string>
    <string name="medicine_image">Medicine Image</string>
    <string name="noFeedback">No feedback</string>
</resources>