<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:background="#ECD285"
    tools:context=".DoctorInformationManagement.MedicineViewCustomer">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:text="@string/upload_image"
        style="@style/subHeaderStyle"
        android:id="@+id/medImg" />

    <ImageView
        android:id="@+id/ImgMed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:scaleType="fitCenter"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:contentDescription="@string/doctor_image"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/dotName" />

    <EditText
        android:id="@+id/dtPro"
        style="@style/normalStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="doctor profession"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/doctor_profession"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        style="@style/buttonStyle"
        android:text="@string/recognise_medicine"
        android:id="@+id/updateBtn" />
</LinearLayout>