<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    tools:context=".MedicineOCR.DoctorFilterMedicine">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:text="@string/retrieve_patient_medicine"
        android:textSize="26sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnRet"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="32dp"
        android:text="@string/retrieve" />

    <EditText
        android:id="@+id/medicineText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/medicine"
        android:textStyle="italic"
        android:alpha="0.4"
        android:importantForAutofill="no" />

    <ListView
        android:id="@+id/filterMediList"
        android:layout_width="363dp"
        android:layout_height="432dp" />
</LinearLayout>