<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECD285"
    tools:context=".DoctorInformationManagement.DoctorProfile"
    android:orientation="vertical">

        <ImageView
            android:id="@+id/ImgMed"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginVertical="15dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/doctor_image"
            android:enabled="false"/>

        <TextView
            android:text="@string/doctor_name"
            style="@style/headerStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/doc_Name"
            android:text="@string/doctor_name"
            style="@style/normalStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="#ECD285"/>

        <TextView
            android:text="@string/doctor_profession"
            style="@style/headerStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp" />

        <EditText
            android:id="@+id/doc_Pro"
            style="@style/normalStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:autofillHints="doctor profession"
            android:enabled="false"
            android:inputType="text"
            android:minHeight="48dp"
            android:maxLength="100"
            android:text="@string/doctor_profession"
            tools:ignore="LabelFor,VisualLintTextFieldSize,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/errPro"
            style="@style/normalStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#F44336"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp" />


        <TextView
            android:text="@string/working_location"
            style="@style/headerStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp" />

        <AutoCompleteTextView
            android:id="@+id/autoCurrentHospital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/toggle_rounded"
            android:ems="10"
            android:hint="@string/hospital_suggestion"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textStyle="italic"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/doc_Hosp"
            style="@style/normalStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:autofillHints="Work Location"
            android:inputType="text"
            android:minHeight="48dp"
            android:maxLength="100"
            android:text="@string/working_location"
            android:enabled="false"
            tools:ignore="LabelFor,VisualLintTextFieldSize,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/errHos"
            style="@style/normalStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#F44336"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <Button
                    android:id="@+id/editBtn"
                    android:text="@string/edit"
                    android:background="@drawable/bg_white_rounded"
                    android:layout_width="100sp"
                    android:layout_height="50sp"
                    android:layout_margin="150dp"
                    android:layout_gravity="center_horizontal" />

                <Button
                    android:id="@+id/picsBtn"
                    android:background="@drawable/bg_white_rounded"
                    android:layout_marginStart="40sp"
                    android:layout_marginEnd="15sp"
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/select_image"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/updateBtn"
                    android:background="@drawable/bg_white_rounded"
                    android:text="@string/profile_update"
                    android:layout_marginStart="15sp"
                    android:layout_marginEnd="50sp"
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    tools:ignore="VisualLintBounds"
                    android:visibility="gone" />
        </LinearLayout>



</LinearLayout>