<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ECD285"
    android:id="@+id/drawerLayout"
    tools:context=".DoctorInformationManagement.UploadImg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/firebaseImage"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginVertical="30dp"
            android:scaleType="fitCenter"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:contentDescription="@string/doctor_image"
            android:src="@drawable/image" />

        <TextView
            android:text="@string/doctor_name"
            style="@style/headerStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/dtName"
            android:text="@string/doctor_name"
            style="@style/normalStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textColor="#9C27B0" />

        <View
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="#ECD285"/>

        <Button
            android:id="@+id/btnRet"
            android:text="@string/select_image"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginBottom="32dp"
            android:layout_gravity="center"
            style="@style/buttonStyle"
            android:background="@drawable/bg_white_rounded" />

        <Button
            android:id="@+id/uploadImageBtn"
            android:text="@string/upload_image"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            style="@style/buttonStyle"
            android:background="@drawable/bg_white_rounded" />

        <View
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="#ECD285"/>
    </LinearLayout>




</ScrollView>


<com.google.android.material.navigation.NavigationView
android:layout_width="wrap_content"
android:layout_height="match_parent"
android:id="@+id/nav_view"
android:layout_gravity="start"
android:fitsSystemWindows="true"
app:headerLayout="@layout/nav_header"
app:menu="@menu/nav_menu_doctor">
</com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>