<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="15dp"
    android:padding="2dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#ECD285" >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userImg"
            android:layout_width="82dp"
            android:layout_height="51dp"
            android:layout_margin="10dp"
            android:padding="5dp"
            app:civ_border_color="@color/white"
            app:civ_border_width="1dp"
            app:civ_shadow="true"
            app:civ_shadow_color="#3f51b5"
            app:civ_shadow_radius="10dp"
            app:srcCompat="@drawable/user" />

        <TextView
            android:id="@+id/txtUser"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:padding="5dp"
            android:text="@string/user_name"
            style="@style/normalBoldStyle"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#FFC107">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView3"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            app:civ_border_color="@color/white"
            app:civ_border_width="1dp"
            app:civ_shadow="true"
            app:civ_shadow_color="#3f51b5"
            app:civ_shadow_radius="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#FFC107">

            <TextView
                android:id="@+id/txtDoc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:text="@string/doctor_name"
                android:textColor="#9C27B0"
                style="@style/normalBoldStyle"/>

            <TextView
                android:id="@+id/txtAppoint"
                style="@style/normalBoldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:textColor="#9C27B0" />

            <TextView
                android:id="@+id/txtVisitStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/appointment_status"
                android:textColor="#9C27B0"
                style="@style/normalBoldStyle"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="#ECD285"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#FFC107">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="50dp"
            android:layout_height="37dp"
            android:layout_marginStart="10dp"
            android:padding="5dp"
            app:civ_border_color="@color/white"
            app:civ_border_width="1dp"
            app:civ_shadow="true"
            app:civ_shadow_color="#3f51b5"
            app:civ_shadow_radius="10dp"
            app:srcCompat="@drawable/appointmentmade"
            android:contentDescription="@string/hospital_image" />

        <TextView
            android:id="@+id/txtMedi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_gravity="center"
            android:text="@string/appointment_detail"
            android:textColor="#282BDC"
            style="@style/normalBoldStyle" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#2196F3"
        android:layout_marginBottom="15dp"/>

</LinearLayout>